--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eve-site",
   "version": "0.1.0",
-  "homepage": "https://Bryan-Yam.github.io/eveportfolio",
+  "homepage": "https://bryan-yam.github.io/eveportfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
